--- a/Styles/prices.css
+++ b/Styles/prices.css
@@ -3,7 +3,7 @@
 Developed by Eric Ekra
 Script Date: May 25, 2025 */
 
-
+@import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap');
 body,
 h1,
 h2,
