--- a/Styles/gallerystyle.css
+++ b/Styles/gallerystyle.css
@@ -3,6 +3,8 @@
 Developed by Eric Ekra
 Script Date: May 25, 2025 */
 
+@import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap');
+
 
 body,
 h1,
