I hve change the font

--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -8,7 +8,7 @@ body,
 h1,
 h2,
 h3 {
-  font-family: cursive, fantasy, Arial, Helvetica;
+  font-family: 'Edu NSW ACT Cursive',cursive, fantasy, Arial, Helvetica;
   background-color: #5c4033;
   line-height: 2.5;
   margin: 0;
