--- a/Styles/ServiceStyle.css
+++ b/Styles/ServiceStyle.css
@@ -7,7 +7,7 @@ Script Date: May 25, 2025 */
 body,
 h1,
 h2 {
-  font-family: sans-serif, cursive, fantasy, Arial, Helvetica,
+  font-family: 'Edu NSW ACT Cursive',cursive, fantasy, Arial, Helvetica,
     sans-serif;
   background-color: #5c4033;
   line-height: 1.5;
@@ -16,7 +16,7 @@ h2 {
   gap: 20px;
 }
 .h3 {
-  font-family: Lobster, sans-serif, cursive, fantasy, Arial, Helvetica,
+  font-family: 'Edu NSW ACT Cursive',cursive, fantasy, Arial, Helvetica,
     sans-serif;
   color: #d9c2a0;
   text-align: center;
