--- a/Styles/gallerystyle.css
+++ b/Styles/gallerystyle.css
@@ -10,7 +10,7 @@ body,
 h1,
 h2,
 h3 {
-  font-family: sans-serif, cursive, fantasy, Arial, Helvetica,
+  font-family: 'Edu NSW ACT Cursive', sans-serif, cursive, fantasy, Arial, Helvetica,
     sans-serif;
   background-color: #5c4033;
   line-height: 0.5;
@@ -23,6 +23,15 @@ h3 {
   justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
+}
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.content {
+  flex: 1;
+  padding: 20px;
 }
 .gallery blockquote {
   flex: 1 1 300px;
@@ -39,11 +48,10 @@ h3 {
   transform: scale(1.05);
   transition: all 0.3s ease-in-out;
 }
+
 footer {
   background-color: #5c4033;
   color: #d9c2a0;
   text-align: center;
-  padding: 20px 0;
-  position: fixed;
-  bottom: 100px;
+  padding: 20px;
 }
