I am writing to commit the following changes to the repository: website name changed from "RDL BRAIDS" to "RDL Touch" in French pages and updated footer color in ServiceStyle.css.

--- a/Styles/ServiceStyle.css
+++ b/Styles/ServiceStyle.css
@@ -86,7 +86,7 @@ h2 {
 
 
 footer {
-  background-color: #5c4033;
+  background-color: #B8860B;
   color: #B8860B;
   text-align: center;
   padding: 20px 0;
